<resources>
    <string name="app_name">YourAndroidWebApp</string>
    <string name="title_webapp_list">WebApps</string>
    <string name="title_webapp_detail">WebApp Detail</string>
    <string name="title_activity_hostauth">Authentication Settings</string>
    <string name="webapp_name">WebApp Name :</string>
    <string name="webapp_save_button">Save</string>
    <string name="webapp_create_shortcut">Create Shortcut</string>
    <string name="webapp_url">Url : (need to be full : http://url/)</string>
    <string name="webapp_saved_toast">Saved !</string>
    <string name="webapp_imported_toast">Settings imported !</string>
    <string name="webapp_exported_toast">Settings exported !</string>
    <string name="webapp_shortcutcreating_toast">Running</string>
    <string name="webapp_shortcutcreated_toast">Shortcut created !</string>
    <string name="webapp_iconurl">Icon Url : </string>
    <string name="webapp_ssl_settings">SSL Settings</string>
    <string name="title_activity_ssl_settings">SslSettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_sslsetting_list">SSLSettings</string>
    <string name="title_sslsetting_detail">SSLSetting Detail</string>
    <string name="webapp_url_hint">http://www.google.com</string>
    <string name="sslsetting_detail_activated">Allowed</string>
    <string name="sslsetting_save_button">Save</string>
    <string name="webapp_sslall_activated">All invalid certificates accepted</string>
    <string name="webapp_ssl_activated">Valid personal certificates accepted</string>
    <string name="webapp_reload_connection_change">Reload webpage if connection change</string>
    <string name="webapp_localurl_hint">file://sdcard/...</string>
    <string name="webapp_autoauth">Allow to try auto Auth</string>
    <string name="title_hostauth_list">HostAuths</string>
    <string name="title_hostauth_detail">HostAuth Detail</string>
    <string name="loginform_login">Login</string>
    <string name="loginform_password">Password</string>
    <string name="loginform_save">Save</string>
    <string name="webapp_launch_shortcut">Launch WebApp</string>
    <string name="title_activity_google_drive_settings">Google Drive Settings</string>
    <string name="dialog_title_disconnect_gdrive_account">Disconnect ?</string>
    <string name="dialog_message_disconnect_gdrive_account">Disconnect from account : </string>
    <string name="title_activity_advanced_settings">Advanced Settings</string>
    <string name="webapp_title_alternateurl">Alternate Url based on WIFI networks</string>
    <string name="webapp_title_alternateurloffline">Alternate Url when not connected to any network</string>
    <string name="webapp_offlineopen">Open local file</string>
    <string name="webapp_general">General</string>
    <string name="webapp_actions">Actions</string>
    <string name="webapp_httpsettings">HTTP Custom settings (security : warning)</string>
    <string name="webapp_alternateurl">Alternate Url : </string>
    <string name="webapp_alternateurlssid">Name of wifi networks (SSID), ex: SSID1,SSID2</string>
    <string name="webapp_delete">Delete</string>
    <string name="dialog_title_delete">Confirm deletion</string>
    <string name="dialog_message_delete_webapp">Delete this WebApp</string>
    <string name="webapp_duplicate">Duplicate</string>
    <string name="webapp_cache_mode_title">Cache Mode</string>
    <string name="webapp_pinchzoom_mode_title">Zoom Mode</string>
    <string name="dialog_title_duplicate">Duplicate</string>
    <string name="dialog_message_duplicate_webapp">duplicate this WebApp ?</string>
    <string name="pref_title_webview_fullscreen_mode">Immersive Full-Screen Mode</string>
    <string name="pref_description_webview_fullscreen_mode">Show your webapps in fullscreen</string>
    <string name="pref_title_webview_keepscreen_on">Keep the screen on</string>
    <string name="pref_description_webview_keepscreen_on">The device will stay awake when displaying a webapp</string>
    <string name="pref_title_webview_progress">Show progress bar</string>
    <string name="pref_description_webview_progress">On top of the webview add a progress bar allowing to follow the progress of the web page rendering</string>
    <string name="pref_title_refreshevery">Refresh Webview content every</string>
    <string name="pref_description_refreshevery">Allow the Webview to be refreshed at specific time</string>
    <string name="pref_title_force_downloadviewer_chooser">Force App Chooser</string>
    <string name="pref_description_force_downloadviewer_chooser">When you will click on a PDF/... file in the Webview, force asking for the which application instead of relying on default behavior of android for this file type.</string>
    <string name="pref_title_webapp_allow_geoloc">Allow geolocation</string>
    <string name="pref_description_webapp_allow_geoloc">Will permit the website to ask for geolocation of your device</string>
    <string name="sslsetting_delete">Delete</string>
    <string name="hostauth_delete">Delete</string>
    <string name="download_chooser_title">Choose viewer</string>
    <string-array name="cache_mode">
        <item>Default</item>
        <item>No Cache</item>
        <item>Cache First</item>
        <item>Only Cache</item>
    </string-array>
    <string-array name="pinchzoom_mode">
        <item>No Zoom</item>
        <item>Zoom no Controls</item>
        <item>Zoom with Controls</item>
    </string-array>
    <string name="title_activity_startup">YourAndroidWebApp</string>
    <string name="title_statup">Startup</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="dialog_title_init_gdrive_account">Replace local settings</string>
    <string name="dialog_message_init_gdrive_account">Try to load settings from google drive and replace local settings (x) apps will be lost ?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
</resources>