<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="fr.coding.yourandroidwebapp.SSLSettingDetailFragment">

        <TextView
            android:id="@+id/sslsetting_detail"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textIsSelectable="true"
            tools:context="fr.coding.yourandroidwebapp.SSLSettingDetailFragment" />

        <CheckBox
            android:id="@+id/sslsetting_detail_activated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sslsetting_detail_activated"
            tools:context="fr.coding.yourandroidwebapp.SSLSettingDetailFragment"/>

        <Button
            android:id="@+id/sslsetting_save_button"
            android:layout_height="wrap_content"
            android:text="@string/sslsetting_save_button"
            android:layout_width="fill_parent">
        </Button>

        <Button
            android:id="@+id/sslsetting_delete"
            android:layout_height="wrap_content"
            android:text="@string/sslsetting_delete"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>
</ScrollView>